Add Optional APIs to command parser